# introduced overlayscrollbar # bug with open comment on sidebar !! sinf bootstrap upgrade to 4.1

--- a/test-05/src/index.scss
+++ b/test-05/src/index.scss
@@ -1,4 +1,5 @@
 @import "../node_modules/bootstrap/dist/css/bootstrap.css";
+@import "../node_modules/overlayscrollbars/css/OverlayScrollbars.css";
 
 @import "./styles/color-sheme";
 @import "./styles/triangle";
@@ -28,7 +29,8 @@ body {
 }
 
 .container-fluid {
-  margin: 0 20px 20px 20px;
+  margin: 0;
+  padding: 0 20px;
   background: $global-bg-color;
 }
 
