--- a/test-05/src/styles/_color-sheme.scss
+++ b/test-05/src/styles/_color-sheme.scss
@@ -45,4 +45,4 @@
 }
 
 // current color sheme
-@include light-grey-sheme;
+@include red-sheme;
